fix z-index for user menu

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2627,6 +2627,7 @@ a {
     top: 60px;
     left: calc(100% - 250px);    
     display: none;
+    z-index: 10000;
 }
 
 
